--- a/css/ucb-person.css
+++ b/css/ucb-person.css
@@ -65,10 +65,11 @@ ul.ucb-person-title li:not(:first-child):before,
 ul.ucb-person-department li:not(:first-child):before {
 	font-family: "Font Awesome 5 Free";
 	font-weight: 900;
-	font-size: 0.25em;
+	font-size: .25em;
 	content: "\f111";
 	vertical-align: middle;
-	padding: 0 0.25em;
+	padding-left: .25em;
+	padding-right: 1em;
 }
 
 .ucb-person-title li,
