--- a/templates/field/field--field-ucb-person-title.html.twig
+++ b/templates/field/field--field-ucb-person-title.html.twig
@@ -1,3 +1,3 @@
 <ul class="ucb-person-title">
-	{% for item in items %}<li itemprop="jobTitle">{{ item.content|render|striptags|trim|raw }}</li> {% endfor %}
+	{% for item in items %}<li itemprop="jobTitle">{{ item.content }}</li> {% endfor %}
 </ul>
