--- a/templates/field/field--field-ucb-person-title.html.twig
+++ b/templates/field/field--field-ucb-person-title.html.twig
@@ -1,3 +1,14 @@
-<ul class="ucb-person-title">
-	{% for item in items %}<li itemprop="jobTitle">{{ item.content }}</li> {% endfor %}
-</ul>
+{#
+/**
+ * @file Contains the template to display the Person node's Title field.
+ */
+#}
+{% if items %}
+<div>
+	<ul class="ucb-person-title">
+		{% for item in items %}
+		<li itemprop="jobTitle">{{ item.content|render|trim }}</li>
+		{% endfor %}
+	</ul>
+</div>
+{% endif %}
