CuBoulder/tiamat-theme#275 uses `trim` filter only on directly referenced values, not after `render`

--- a/templates/field/field--field-ucb-person-email.html.twig
+++ b/templates/field/field--field-ucb-person-email.html.twig
@@ -6,9 +6,9 @@
 {% if items %}
 <div>
 	<ul class="ucb-person-email-address">
-		{% for item in items %}
+		{% for item in items %}{% set value = item.content['#context'].value|trim %}
 		<li>
-			<i class="fa fal fa-envelope"></i>&nbsp;<a itemprop="email" href="mailto:{{ item.content['#context'].value|trim|url_encode }}">{{ item.content|render|trim }}</a>
+			<i class="fa fal fa-envelope"></i>&nbsp;<a itemprop="email" href="mailto:{{ value|url_encode }}">{{ value }}</a>
 		</li>
 		{% endfor %}
 	</ul>
