--- a/templates/field/field--field-ucb-person-links.html.twig
+++ b/templates/field/field--field-ucb-person-links.html.twig
@@ -18,7 +18,7 @@
 			%}
 			<li{{item.attributes.addClass(classes)}}>
 				{% set linkTitle = item.content['#title'] %}
-				{% set linkUrl = item.content['#url'].uri|trim %}
+				{% set linkUrl = item.content['#url'].uri %}
 				{% set linkUrlUpper = linkUrl|upper %}
 
 				{% if 'FACEBOOK' in linkUrlUpper %}
