--- a/templates/field/field--field-ucb-person-first-name.html.twig
+++ b/templates/field/field--field-ucb-person-first-name.html.twig
@@ -3,4 +3,4 @@
  * @file Contains the template to display the Person node's First name field.
  */
 #}
-{% if items.0 %}<span itemprop="givenName">{{ items.0.content|render|trim }}</span>{% endif %}
+{% if items.0 %}<span itemprop="givenName">{{ items.0.content['#context'].value|trim }}</span>{% endif %}
