--- a/css/ucb-article-list-block.css
+++ b/css/ucb-article-list-block.css
@@ -27,6 +27,10 @@
     padding-bottom: 20px;
 }
 
+.ucb-article-card-title-only{
+    padding-bottom: 20px;
+}
+
 .ucb-article-card-img{
     width: 110px;
     height: 110px;
