--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -9,17 +9,12 @@
 {{ attach_library('boulderD9_base/ucb-page') }}
 {{ attach_library('boulderD9_base/ucb-person') }}
 
-{%
-set classes = [
-'node',
-'node--type-' ~ node.bundle|clean_class,
-not node.isPublished() ? 'node--unpublished',
-view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
-]
-%}
-
-{#Dummy variable to ensure that all content tags are set for caching purposes#}
-{% set content_render = content|render %}
+{% set classes = [
+	'node',
+	'node--type-' ~ node.bundle|clean_class,
+	not node.isPublished() ? 'node--unpublished',
+	view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
+] %}
 
 <article{{attributes.addClass(classes)}} itemscope itemtype="https://schema.org/Person">
 	<div class="container ucb-person-header">
