Moves `address` itemprop of Person node to a field template

--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -50,7 +50,7 @@
 					</div>
 				{% endif %}
 				{% if content.field_ucb_person_address.0 %}
-					<div class="ucb-person-section" itemprop="address" aria-labelledby="headerAddress">
+					<div class="ucb-person-section" aria-labelledby="headerAddress">
 						<span class="ucb-person-section-header" id="headerAddress">Address</span>
 						{{ content.field_ucb_person_address }}
 					</div>
