Moves `image` itemprop of Person node to a field template

--- a/templates/field/field--field-ucb-person-address.html.twig
+++ b/templates/field/field--field-ucb-person-address.html.twig
@@ -4,7 +4,7 @@
  */
 #}
 {% if items.0 %}
-<div itemprop="address">
+<div class="ucb-person-address" itemprop="address">
 	{{ items.0.content }}
 </div>
 {% endif %}
