--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -126,7 +126,7 @@
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
 
     <div class="layout-content">
-      {% if page.below_content|render %}
+      {% if page.above_content|render %}
         <div class="ucb-above-content-region">
           {{ page.above_content }}
         </div>
