--- a/templates/block/block--ucb-article-grid.html.twig
+++ b/templates/block/block--ucb-article-grid.html.twig
@@ -170,6 +170,7 @@
     {{ label }}
   </h2>
   {{ title_suffix }}
+  {{ content.body }}
 {# Article Grid Main Block#}
 <article-grid-block
   jsonapi="{{ articlesJSON }}{{ IncludeFilter }}{{ pageCountFilter }}{{ sortFilter }}"
