--- a/css/block/ucb-article-feature-block.css
+++ b/css/block/ucb-article-feature-block.css
@@ -94,3 +94,19 @@
     border-bottom: none;
     padding-bottom: 0px;
 }
+
+@media screen and (max-width: 767px) {
+    .ucb-stacked-secondary-container > .ucb-article-card{
+        margin-bottom: 10px;
+        border-bottom: solid rgba(128, 128, 128, 0.333);
+        padding-bottom: 10px;
+    }
+
+    .ucb-stacked-secondary-container{
+        margin-top: 10px;
+        border-top: solid rgba(128, 128, 128, 0.333);
+        border-bottom: none;
+        padding-bottom: 10px;
+    }
+
+}
