Removes infinite scroll and replace with button for loading additional Articles

--- a/templates/content/node--ucb-article-list.html.twig
+++ b/templates/content/node--ucb-article-list.html.twig
@@ -297,6 +297,11 @@
       <div id="ucb-al-error" class="ucb-list-msg ucb-error">
         Error retrieving article list from the API endpoint.  Please try again later.  
       </div>
+      <div class="ucb-article-list-button-container">
+        <a id='ucb-el-load-more'class="ucb-article-list-button">
+          Load More
+        </a>
+      </div>
     </div>
   </div>
 </article>
