--- a/css/ucb-article-list.css
+++ b/css/ucb-article-list.css
@@ -58,3 +58,27 @@
 	font-weight: 600;
 	font-size: 75%;
 }
+
+.ucb-article-list-button-container{
+    text-align: center;
+}
+
+.ucb-article-list-button{
+    display: none;
+    padding: 5px 10px;
+    font-weight: bold;
+    font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin-bottom: 5px;
+    background-clip: padding-box;
+    color: #0277BD !important;
+    border: 1px solid #0277BD;
+    border-radius: 0px;
+    background-color: transparent;
+	text-decoration: none;
+}
+
+.ucb-article-list-button:hover{
+    transition: background-color 0.25s ease, border-color 0.25s ease, color 0.25s ease;
+    background-color: #0277BD;
+    color: white !important;
+}
