--- a/css/block/content-row.css
+++ b/css/block/content-row.css
@@ -66,6 +66,7 @@
   min-height: 100%;
   object-fit: cover;
   margin-bottom: 0;
+  padding-bottom: 0px;
 }
 
 .feature-row-image-container {
@@ -98,12 +99,14 @@
   margin-bottom: 0;
   color: white;
   padding: 0.75em;
+  width: 100%;
 }
 
 @media screen and (max-width: 975px) {
   .small-feature-row {
     margin-top: 1em;
     padding-right: 0;
+    width: 100%;
   }
 
   .small-feature:first-child {
