slider bottom content fix

--- a/css/block/slider.css
+++ b/css/block/slider.css
@@ -211,3 +211,9 @@ a.slide-link i.fab {
     text-align: left;
   }
 }
+
+.carousel-item-structure {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
